--- a/Webshop/wwwroot/index.html
+++ b/Webshop/wwwroot/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <title></title>
+    <link rel="shortcut icon" href="#" />
+    <title>WEBSHOP</title>
 </head>
 
 <body>
@@ -16,17 +17,20 @@
     </nav>
     <div class="container" >
         <div class="product-card">
-            <div class="img">
+            <!-- <div class="img">
                 <img src="" alt="">
             </div>
-            <div class="title" id="product">
+            <div class="title">
+
+            </div>
+            <div class="description">
 
             </div>
             <div class="price">
 
             </div>
             <div class="add-to-cart">
-            </div>
+            </div> -->
         </div>
     </div>
 
